--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,11 @@ input[type=number]:focus, input[type=text]:focus {
 
   box-sizing: border-box;
 }
+.resizedTextbox {
+  width: 100px; 
+  height: 20px; 
+  padding: 1px
+}
 
 @keyframes App-logo-spin {
   from {
